# vcf2prot

./: .gitignore  Cargo.toml  Dockerfile  LICENCE  PPGG_PY.py  README.md  build.rs  docker-compose.debug.yml  list_supported_alterations.txt  ppgg_rust  sample1.fasta  singularity_build_script.def
automation_scripts/: file_automation.py  file_automation_v2.py  parallization_python.py  performance_benchmark.py  pipline_nextflow.nf
benchmarking_results/: HG00129.fasta  PERCISION_PRO_DB_RESULTS.pergeno.protein_changed.fa
bins/Linux/: vcf2prot_linux
bins/MacOS/: vcf2prot
bins/linux/cpu_only/: ppg_linux_cpu
bins/linux/gpu/: ppg_linux_gpu
bins/macos/: ppg_mac_os
cuda_lib/: kernel.cu  readme.txt
output_format/: HG00096.fasta
src/: build.rs  lib.rs  main.rs  readers.rs  singularity_build_script.def  writers.rs
src/binders/: binderCUDA.rs  mod.rs
src/data_structures/: Constants.rs  FastaFile.rs  Map.rs  MaskDecoder.rs  mod.rs  mutation_ds.rs  vcf_ds.rs
src/data_structures/InternalRep/: engines.rs  gir.rs  haplotype_instruction.rs  instruction.rs  mod.rs  personalized_genome.rs  proband_instructions.rs  sequence_tape.rs  task.rs  transcript_instructions.rs
src/functions/: mod.rs  summary.rs  text_parser.rs  vcf_tools.rs
src/parts/: cli.rs  exec.rs  io.rs  mod.rs
