[package]
name = "ppg"
version = "0.1.4"
authors = ["Hesham ElAbd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppg"
path = "src/lib.rs"

[[bin]]
name = "ppg"
path = "src/main.rs"

[dependencies]
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jfs="0.6.2"
clap = "3.0.0-beta.2"
crossbeam="0.8"
chrono = "0.4"
scoped_threadpool="0.1.6"
num_cpus = "0.2"
libc = "0.2.0"
cc = "1.0"
flate2 = "1.0"

[build-dependencies]
cc = "1.0"
