[package]
name = "ppg"
version = "0.1.4"
authors = ["Hesham ElAbd <h.elabd@ikmb.uni-kiel.de>"]
license = "MIT OR Apache-2.0"
description = "A library and an associated executable, the library provides tools for building tools that can parse and work for VCF and FASTA files while the associated executable is a command line tool for generating protein sequences from a reference FASTA file and a VCF file"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/ikmb/ppg"
repository = "https://github.com/ikmb/ppg"
keywords = ["genetics", "protein-sequences","Proteomics","VCF-files","VCF-converter","bioinformatics"]
categories = ["command-line-utilities","data-structures","science","parsing"]
exclude = [
    "examples/*",
    "automation_scripts/*",
    ".github/*",
    "Dockerfile"
]

[lib]
name = "ppg"
path = "src/lib.rs"

[[bin]]
name = "ppg"
path = "src/main.rs"

[dependencies]
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jfs="0.6.2"
clap = "3.0.0-beta.2"
crossbeam="0.8"
chrono = "0.4"
scoped_threadpool="0.1.6"
num_cpus = "0.2"
libc = "0.2.0"
cc = "1.0"
flate2 = "1.0"

[build-dependencies]
cc = "1.0"

